--- a/Aulas/aula_01/src/app/components/navbar/navbar.component.html
+++ b/Aulas/aula_01/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
-<ul>
-    <a class="link" routerLink="/">Home</a>
-    <a class="link" routerLink="/login" >Login</a>
-    <a class="link" routerLink="/cadastro" >Cadastro</a>
-
-</ul>
+<div class="caixa">
+  <a routerLink="/">Home</a>
+  <a routerLink="/login">Login</a>
+  <a routerLink="/cadastro">Cadastro</a>
+</div>
