--- a/Aulas/aula_01/src/app/views/cadastro/cadastro.component.html
+++ b/Aulas/aula_01/src/app/views/cadastro/cadastro.component.html
@@ -1,9 +1,7 @@
-
 <div class="form">
-    <input type="text" placeholder="Nome de usuário">
-    <input type="text" placeholder="Email">
-    <input type="text" placeholder="Senha">
-    <input type="text" placeholder="Confirmar Senha">
-    <button>Cadastro</button>
+  <input type="text" placeholder="Nome de usuário">
+  <input type="text" placeholder="Email">
+  <input type="text" placeholder="Senha">
+  <input type="text" placeholder="Confirmar senha">
+  <button>Cadastro</button>
 </div>
-<p>TELA DE CADASTRO</p>
