--- a/Aulas/aula_01/src/app/views/login/login.component.html
+++ b/Aulas/aula_01/src/app/views/login/login.component.html
@@ -1,1 +1,5 @@
-<p>TELA DE LOGIN</p>
+<div class="form">
+  <input type="text" placeholder="Email">
+  <input type="text" placeholder="Senha">
+  <button>Login</button>
+</div>
