--- a/Listas/Lista_3/exerc_1/src/app/components/shared/navbar/navbar.component.css
+++ b/Listas/Lista_3/exerc_1/src/app/components/shared/navbar/navbar.component.css
@@ -6,15 +6,16 @@
 
 .menu a {
   text-decoration: none;
-  margin: 5px;
-  color: rgb(200, 89, 10);
+  margin: 20px auto ;
+  color: rgb(29, 10, 200);
   font-size: 30px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   cursor: pointer;
-  transition: 3ms linear;
+  transition: 0.6s linear;
 }
 
 .menu a:hover {
   font-size: 32px;
-  color: black;
+  color: rgb(255, 250, 250);
+  opacity: inherit;
 }
