--- a/Listas/Lista_3/exerc_1/src/app/components/views/home/home.component.css
+++ b/Listas/Lista_3/exerc_1/src/app/components/views/home/home.component.css
@@ -1,24 +1,32 @@
-.main {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  text-align: center;
+.container {
+  margin-top: 150px;
 }
 
-.animais {
-  width: 300px;
-  flex-wrap: wrap;
-  border: 7px ridge black;
-  border-radius: 10px;
-  justify-content: center;
+.card {
+  background-color: rgb(0, 0, 0);
   font-family: 'Courier New', Courier, monospace;
-  margin: 50px;
-  background-color: rgb(241, 150, 47);
-  color: azure;
+  color: rgb(255, 255, 255);
+  border: solid rgb(255, 255, 255);
+  border-radius: 20px;
+  box-shadow: 10px -10px 40px rgb(255, 255, 255);
 }
 
-.animais p {
-  margin: 5px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+.card-img-top {
+  border-radius: 15px;
+  border: solid rgb(0, 0, 0);
+}
+
+.card-title {
+  font-size: 25px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-text {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
