--- a/Listas/Lista_5/exerc_1/src/styles.css
+++ b/Listas/Lista_5/exerc_1/src/styles.css
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #d5c6ff;
+    background-color: #d6aff7;
 }
