--- a/Listas/Lista_5/exerc_1/src/app/components/shared/listagem-pokemons/listagem-pokemons.component.css
+++ b/Listas/Lista_5/exerc_1/src/app/components/shared/listagem-pokemons/listagem-pokemons.component.css
@@ -1,31 +1,32 @@
 .main {
     display: flex;
-    margin-top: 50px;
+    margin-top: 20px;
     width: 100%;
     flex-direction: row-reverse;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 50px;
 }
  
 .pokemons {
   align-items: center;
-  background-color: #d196f8;
+  background-color: #b98cdf;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 25px;
-  font-style: oblique;
-  color: #ffffff;
-  border-radius: 50%;
-  height: 200px;
-  margin: 10px;
-  width: 220px;
+  font-family: serif ;
+  font-size: 30px;
+  color: #000000;
+  border-radius: 100%;
+  height: 110px;
+  width: 180px;
+  margin: 25px;
   cursor: pointer;
+  border-color: #000000;
 }
 
 .pokemons:hover { 
-  transform: scale(1.15);
+  transform: scale(1.50);
   background-color: #ffffff;
   color: #000000;
 }
