--- a/Listas/Lista_5/petshop-animais-selvagens/src/styles.css
+++ b/Listas/Lista_5/petshop-animais-selvagens/src/styles.css
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: black;
-    zoom: 90%;
+    background-color: rgb(233, 220, 165);
 }
