--- a/Listas/Lista_7/exerc_1/home.css
+++ b/Listas/Lista_7/exerc_1/home.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     background-color: black;
+    animation: animacao 5s linear infinite;
 }
 
 .content-image {
@@ -12,6 +13,47 @@
     background-size: 100%;
 }
 
-/* .content-form {
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 400px;
+    height: 300px;
+    border-radius: 10px;
+    border: transparent;
+    backdrop-filter: blur(15px);
+    box-shadow: inset 0 0 2em 2em rgb(165, 157, 87);;
+}
 
-} */
+.content-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.content-form input, button {
+    margin: 5px;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 10px;
+    border: 1px solid #FFF;
+    background: transparent;
+}
+
+.content-form button {
+    cursor: pointer;
+    color: white;
+    background: linear-gradient(black, rgb(172, 169, 169), black);
+}
+
+@keyframes animacao {
+    100% {
+        filter: hue-rotate(350deg);
+    }
+}
